--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,72 @@
-h1 {
-  color: red;
+* {
+  text-decoration: none;
+}
+
+body {
+  background-image: url(../img/Breaking-Bad.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  margin: 0;
+}
+
+#footer {
+  width: 100%;
+  height: 90px;
+  background-color: #000;
+  opacity: 0.7;
+  position: absolute;
+  z-index: 1;
+}
+
+#back {
+  width: 100%;
+  height: 90px;
+  z-index: 2;
+  position: absolute;
+}
+
+.link_1 {
+  display: inline-block;
+  margin-top: 32px;
+  margin-left: 30px;
+  margin-right: 15px;
+  color: rgb(243,198,26);
+  font-family: sans-serif;
+  font-size: 1.3em;
+}
+
+.link_1 span {
+  color: rgb(255, 255, 255);
+}
+
+.link_2 {
+  color: rgb(255, 255, 255);
+  font-family: sans-serif;
+  font-weight: lighter;
+  margin: 20px;
+}
+
+.link_2:hover {
+  color: rgb(243,198,26);
+}
+
+.link_3 {
+  width: 110px;
+  height: 32px;
+  background-color: rgb(243,198,26);
+  color: rgb(255, 255, 255);
+  display: block;
+  text-align: center;
+  float: right;
+  margin-right: 30px;
+  margin-top: 31px;
+  font-family: sans-serif;
+  font-size: 1.1em;
+  padding-top: 9px;
+}
+
+.link_3:hover {
+  border-color: rgb(243,198,26);
+  background-color: rgb(255, 255, 255);
+  color: rgb(243,198,26);
 }
