--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,19 @@
 
 body {
   background-image: url(../img/Breaking-Bad.jpg);
-  background-size: 100%;
+  background-attachment: fixed;
+  background-position: center center;
+  background-size: cover;
   background-repeat: no-repeat;
+  overflow: hidden;
   margin: 0;
 }
 
-#footer {
+#header {
   width: 100%;
   height: 90px;
   background-color: #000;
-  opacity: 0.7;
+  opacity: 0.75;
   position: absolute;
   z-index: 1;
 }
@@ -69,4 +72,73 @@ body {
   border-color: rgb(243,198,26);
   background-color: rgb(255, 255, 255);
   color: rgb(243,198,26);
+}
+
+.backGround {
+  width: 0;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  margin-top: 90px;
+  background: linear-gradient(to right, hsla(0, 0%, 0%, 0.6), rgba(0, 0, 0, 0.06));
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+h1 {
+  margin-top: 110px;
+  margin-left: 105px;
+  font-family: sans-serif;
+  color: rgb(255, 255, 255);
+  font-weight: 300;
+  font-size: 4.3em;
+  transition: 0.5s;
+  position: absolute;
+}
+
+p {
+  margin-top: 275px;
+  margin-left: 105px;
+  font-family: sans-serif;
+  color: rgb(255, 255, 255);
+  font-weight: 300;
+  font-size: 1.2em;
+  transition: 0.5s;
+  position: absolute;
+}
+
+.link_4 {
+  transition: 0.5s;
+  width: 195px;
+  height: 50px;
+  color: rgb(255, 255, 255);
+  font-family: sans-serif;
+  font-size: 2em;
+  padding-top: 9px;
+  display: inline-block;
+  margin-top: 430px;
+  margin-left: 105px;
+  text-align: center;
+}
+
+.link_5 {
+  transition: 0.5s;
+  width: 175px;
+  height: 50px;
+  color: rgb(255, 255, 255);
+  font-family: sans-serif;
+  font-size: 1.9em;
+  padding-top: 9px;
+  display: inline-block;
+  margin-top: 430px;
+  text-align: center;
+}
+
+.link_4:hover {
+  background-color: rgb(243,198,26);
+
+}
+
+.link_5:hover {
+  background-color: rgb(243,198,26);
 }
