--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 * {
   text-decoration: none;
+  outline: 0 !important;
 }
 
 body {
@@ -93,7 +94,8 @@ h1 {
   font-weight: 300;
   font-size: 4.3em;
   transition: 0.5s;
-  position: absolute;
+  position: fixed;
+  display: inline-block;
 }
 
 p {
@@ -104,13 +106,13 @@ p {
   font-weight: 300;
   font-size: 1.2em;
   transition: 0.5s;
-  position: absolute;
+  position: fixed;
+  display: inline-block;
 }
 
 .link_4 {
   transition: 0.5s;
   width: 195px;
-  height: 50px;
   color: rgb(255, 255, 255);
   font-family: sans-serif;
   font-size: 2em;
@@ -124,7 +126,6 @@ p {
 .link_5 {
   transition: 0.5s;
   width: 175px;
-  height: 50px;
   color: rgb(255, 255, 255);
   font-family: sans-serif;
   font-size: 1.9em;
