--- a/css/component.css
+++ b/css/component.css
@@ -8,7 +8,7 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 	font-family: 'icomoon';
 	src:url('../fonts/icomoon/icomoon.eot');
 	src:url('../fonts/icomoon/icomoon.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/icomoon/icomoon.woff') format('woff'),
+		url('../fonts/icomoon/icomoon.ico') format('ico'),
 		url('../fonts/icomoon/icomoon.ttf') format('truetype'),
 		url('../fonts/icomoon/icomoon.svg#icomoon') format('svg');
 	font-weight: normal;
@@ -37,7 +37,7 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 	right: 0;
 	border-radius: 30px;
 	outline: none;
-	background: rgba(55, 84, 119, 0.35);
+	background: rgba(55, 85, 120, 0.65);
 	width: 350px;
 	height: 40px;
 	margin: 0;
@@ -50,7 +50,14 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 	text-align: left;
 	border: 0;
   border-color: rgba(55, 84, 119, 0.25);
+	transition: 0.5s;
+	display: none;
+
 }
+
+ .sb-search-input.active {
+	 display: inline-block;
+ }
 
 .sb-search-input::-webkit-input-placeholder {
 	color: #fff;
@@ -100,7 +107,6 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 
 .sb-icon-search {
 	color: #fff;
-	background: rgba(0, 0, 0, 0.35);
 	height: 50px;
 	width: 45px;
 	margin-right: -2px;
@@ -123,11 +129,11 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 .sb-search.sb-search-open,
 .no-js .sb-search {
 	width: 100%;
+	display: block;
 }
 
 .sb-search.sb-search-open .sb-icon-search,
 .no-js .sb-search .sb-icon-search {
-	background: rgba(0, 0, 0, 0.35);
 	color: #fff;
 	z-index: 11;
 }
@@ -135,4 +141,8 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 .sb-search.sb-search-open .sb-search-submit,
 .no-js .sb-search .sb-search-submit {
 	z-index: 90;
+}
+
+.sb-search.sb-search-open .sb-search-input {
+	display: block;
 }
