--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@ body {
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  overflow: hidden;
   margin: 0;
+  height: 1000px;
 }
 
 #header {
@@ -63,7 +63,7 @@ body {
   text-align: center;
   float: right;
   margin-right: 30px;
-  margin-top: 31px;
+  margin-top: 25px;
   font-family: sans-serif;
   font-size: 1.1em;
   padding-top: 9px;
@@ -80,14 +80,14 @@ body {
   height: 100%;
   position: fixed;
   left: 0;
-  margin-top: 90px;
-  background: linear-gradient(to right, hsla(0, 0%, 0%, 0.6), rgba(0, 0, 0, 0.06));
+  top: 0;
+  background: linear-gradient(to right, hsla(0, 0%, 0%, 0.6), rgba(0, 0, 0, 0));
   overflow-x: hidden;
   transition: 0.5s;
 }
 
-h1 {
-  margin-top: 110px;
+.h_1 {
+  margin-top: 180px;
   margin-left: 105px;
   font-family: sans-serif;
   color: rgb(255, 255, 255);
@@ -98,8 +98,8 @@ h1 {
   display: inline-block;
 }
 
-p {
-  margin-top: 275px;
+.p_1 {
+  margin-top: 345px;
   margin-left: 105px;
   font-family: sans-serif;
   color: rgb(255, 255, 255);
@@ -118,7 +118,7 @@ p {
   font-size: 2em;
   padding-top: 9px;
   display: inline-block;
-  margin-top: 430px;
+  margin-top: 500px;
   margin-left: 105px;
   text-align: center;
 }
@@ -131,7 +131,7 @@ p {
   font-size: 1.9em;
   padding-top: 9px;
   display: inline-block;
-  margin-top: 430px;
+  margin-top: 500px;
   text-align: center;
 }
 
@@ -142,4 +142,159 @@ p {
 
 .link_5:hover {
   background-color: rgb(243,198,26);
+}
+
+.post {
+  width: 1300px;
+  height: 80%;
+  background-color: rgba(0, 0, 0, 0.75);
+  opacity: 0.75;
+  border: 2px solid silver;
+  border-radius: 15px;
+  margin-left: 75px;
+  margin-top: 140px;
+  max-width: 90%;
+  transition: 0.5s;
+  left: 0;
+  overflow-x: hidden;
+}
+
+iframe {
+  border-radius: 15px;
+  margin-left: 50px;
+  margin-top: 50px;
+}
+
+.videoPost {
+  opacity: 1;
+}
+
+.postWatch {
+  opacity: 1;
+}
+
+#postLogin {
+  background-color: rgba(0, 0, 0, 0.75);
+  border: 2px solid silver;
+  border-radius: 15px;
+  width: 500px;
+  height: 550px;
+  margin-top: 140px;
+  margin-left: 33%;
+  z-index: 0;
+  position: absolute;
+}
+
+.logo {
+  text-align: center;
+  margin-top: 60px;
+  color: #fff;
+  font: 2.5em sans-serif;
+}
+
+.logo span {
+  color: rgb(243,198,26);
+}
+
+.reg {
+  color: #fff;
+  text-align: center;
+  font: 1.5em sans-serif;
+  margin-top: 40px;
+}
+
+::-webkit-input-placeholder {color:#232628;}
+
+.input_1 {
+  border-radius: 10px;
+  margin-top: 20px;
+  margin-left: 50px;
+  font-family: sans-serif;
+  font-size: 1.2em;
+  width: 400px;
+  height: 40px;
+  border: 0;
+  text-align: center;
+}
+
+.input_2 {
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-left: 50px;
+  font-family: sans-serif;
+  font-size: 1.2em;
+  width: 400px;
+  height: 40px;
+  border: 0;
+  text-align: center;
+}
+
+.input_3 {
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-left: 50px;
+  font-family: sans-serif;
+  font-size: 1.2em;
+  width: 400px;
+  height: 40px;
+  border: 0;
+  text-align: center;
+}
+
+.input_4 {
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-left: 50px;
+  font-family: sans-serif;
+  font-size: 1.2em;
+  width: 400px;
+  height: 40px;
+  border: 0;
+  text-align: center;
+}
+
+.SignUp_1 {
+  margin-left: 145px;
+  margin-top: 20px;
+  border: 2px solid silver;
+  background: rgba(255, 255, 255, 0.0);
+  color: #fff;
+  height: 40px;
+  width: 220px;
+  border-radius: 10px;
+  font-family: sans-serif;
+  font-size: 1em;
+  display: inline-block;
+  cursor: pointer;
+  display: inline-block;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.SignUp_1:hover{
+  background-color: rgb(243,198,26);
+
+}
+
+.SignUp_2 {
+  margin-left: 145px;
+  margin-top: 20px;
+  border: 2px solid silver;
+  background: #1ac8f4;
+  color: #fff;
+  height: 40px;
+  width: 220px;
+  border-radius: 10px;
+  font-family: sans-serif;
+  font-size: 1em;
+  display: inline-block;
+  cursor: pointer;
+  display: inline-block;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.SignUp_2:hover{
+  background: rgb(28, 218, 30);
+
 }
