--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ body {
   font-family: sans-serif;
   font-size: 1.1em;
   padding-top: 9px;
+  
 }
 
 .link_3:hover {
@@ -161,16 +162,18 @@ body {
 
 iframe {
   border-radius: 15px;
-  margin-left: 50px;
-  margin-top: 50px;
+  width: 1300px;
+  height: 640px;
 }
 
 .videoPost {
   opacity: 1;
+  overflow: hidden;
 }
 
 .postWatch {
   opacity: 1;
+  overflow: hidden;
 }
 
 #postLogin {
@@ -297,4 +300,13 @@ iframe {
 .SignUp_2:hover{
   background: rgb(28, 218, 30);
 
+}
+
+#img {
+  margin-left: 40px;
+  margin-top: 40px;
+  border-radius: 15px;
+  border: 2px solid silver;
+  width: 250px;
+  height: 145px;
 }
